Fix gallery spacing and nav image

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -42,17 +42,16 @@
     background-color: bisque;
     border: 2px solid wheat;
     display: flex;
-    justify-content: space-around;
+    align-items: center;
     order: 2;
     flex: 0 0 85%;
     flex-wrap: wrap;
-    align-items: center;
     gap: 15px;
     padding: 10px;
 }
 
-.gallery-wrapper div {
-    flex-basis: 30%;
+.gallery-wrapper picture {
+    max-width: calc((100% / 4) - 15px);
 }
 
 img{
